[package]
name = "macro-class-render"
version = "0.0.1"
authors = ["jguyet"]

license = "CC0-1.0"
description = "Macro for speed class coding"
repository = "https://github.com/jguyet/macro-class-render.git"
readme = "README.md"
#documentation

[lib]
proc-macro = true

[dependencies]
quote = "0.3.15"
syn = "0.11.11"
